2004-08-14 Dominik Reichardt <dominus@users.sourceforge.net>
	* docs/xml/docs.xml,faq.xml: updated documentation and FAQ
	* docs/xml/html.xsl: got rid of another pointer to our ML
	* docs/ReadMe.html,FAQ.html: updated documentation and FAQ
	* Readme, FAQ: updated
	* ReadMe.1st: got rid of another pointer to our ML
	
2004-08-06    <jeff@mini.nerble.net>

	* drag.cc (Dragging_info): Avoid dropping an object where it is no
	longer accessible.

2004-08-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Spellbook_gump.cc: use real infinity symbol in SI
	* Spellbook_gump.cc: show infinity (in SI) or 99 (in BG) in wizard mode

2004-08-03  Max Horn  <max@quendi.de>

	* exult.cc: Don't set icon on OS X; the external icon is *much* nicer.

2004-07-11    <jeff@mini.nerble.net>

	* actors.cc,combat.cc,etc.:  Support for 'charmed' flag.

2004-07-04    <jeff@mini.nerble.net>

	* gamemap.cc,iregobjs.cc, etc.:  Save/restore pos. of items within
	their containers.

2004-07-03    <jeff@mini.nerble.net>

	* cheat.cc (public): When creating an object with <insert>, place
	it on the ground instead of in inventory.

2004-06-29    <jeff@mini.nerble.net>

	* actors.cc: Teleport NPC to schedule if not on current map.
	* Lots:  move() methods take a 'newmap' parameter.

2004-06-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapes/vgafile.*: removed limit of 255 frames in a shape.
	  (Note that this does not remove the limit in ShapeID)

2004-06-27    <jeff@mini.nerble.net>

	* actorio.cc: NPC's get saved/restored on proper map.

2004-06-26    <jeff@mini.nerble.net>

	* Merged in multiple-map support.
	* Merged in use of dexterity and wand charges.
	* Merged in builtin groups in ExultStudio.

2004-06-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/Makefile.am, ucxt/data/Makefile.am: fixed makefile problems

2004-06-07  Ryan Nunn  <colourles@users.sourceforge.net>
	* msvcstuff/Exult.vcproj: Fixing compiling
