@@ -62,11 +62,8 @@ void Virtue_stone_object::write_ireg
 	DataSource *out
 	)
 	{
-	unsigned char buf[13];		// 13-byte entry + length-byte.
-	buf[0] = 12;
-	unsigned char *ptr = &buf[1];	// To avoid confusion about offsets.
-	write_common_ireg(ptr);		// Fill in bytes 1-4.
-	ptr += 4;
+	unsigned char buf[20];		// 12-byte entry.
+	unsigned char *ptr = write_common_ireg(12, buf);
 					// Write tilex, tiley.
 	*ptr++ = pos.tx%c_tiles_per_schunk;
 	*ptr++ = pos.ty%c_tiles_per_schunk;
@@ -79,7 +76,7 @@ void Virtue_stone_object::write_ireg
 	*ptr++ = (get_lift()&15)<<4;	// Stone's lift in entry[9].
 	*ptr++ = 0;			// Entry[10].  Unknown.
 	*ptr++ = 0;			// Entry[11].  Unknown.
-	out->write((char*)buf, sizeof(buf));
+	out->write((char*)buf, ptr - buf);
 	}
 
 
